// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indent_size=2: beautifiedText 1`] = `
if (true) {
  helloWorld();
}
`;

exports[`indent_size=2: beautifiers 1`] = `
Array [
  "JS-Beautify",
]
`;

exports[`indent_size=2: trimmedOptions 1`] = `
Object {
  "brace_style": "none",
  "indent_size": 2,
}
`;

exports[`indent_size=3: beautifiedText 1`] = `
if (true) {
    helloWorld();
}
`;

exports[`indent_size=3: beautifiers 1`] = `
Array [
  "Prettier",
  "JS-Beautify",
]
`;

exports[`indent_size=3: trimmedOptions 1`] = `
Object {
  "brace_style": "none",
  "indent_style": "space",
}
`;

exports[`indent_size=5: beautifiedText 1`] = `
if (true) {
     helloWorld();
}
if (true) {
     helloWorld();
}

`;

exports[`indent_size=5: beautifiers 1`] = `
Array [
  "Prettier",
]
`;

exports[`indent_size=5: trimmedOptions 1`] = `
Object {
  "indent_size": 5,
}
`;
